--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.9",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
 }
